--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
             <version>0.2.1</version>
         </dependency>
 
+        <!--REST Assured-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
